version/0.32/_sources/api/solver/_autosummary/settings/pressure_outlet_1.rst.txt
:orphan:

.. _pressure_outlet_1:

pressure_outlet
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.pressure_outlet_1
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_5>`                                         Crate new boundary.

:ref:`delete <delete>`                                      Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`pressure_outlet_1_child <pressure_outlet_1_child>`


.. rubric:: Included in:

==============================   =======================

Parent                                           Summary

==============================   =======================
:ref:`boundaries <boundaries>`       'boundaries' child.

==============================   =======================

