version/0.40/_sources/api/solver/_autosummary/settings/pressure_outlet_1.rst.txt
:orphan:

.. _pressure_outlet_1:

pressure_outlet
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.pressure_outlet_1
    :show-inheritance:

.. rubric:: Methods

==========================================   =====================================================

Method                                                                                     Summary

==========================================   =====================================================
:ref:`create <create>`                           Create a new instance of the current object type.

:ref:`delete <delete>`                                                    Delete selected objects.

:ref:`rename <rename>`                                                          Rename the object.

:ref:`list <list_1>`                                                List the names of the objects.

:ref:`list_properties <list_properties_1>`                   List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                                      Create a copy of the object.

==========================================   =====================================================

.. rubric:: Named object type

:ref:`pressure_outlet_1_child <pressure_outlet_1_child>`


.. rubric:: Included in:

================================================   ===================================

Parent                                                                         Summary

================================================   ===================================
:ref:`boundary_conditions <boundary_conditions>`       The boundary conditions object.

================================================   ===================================

